# rrtmg

./: .gitignore  CMakeLists.txt
cmake/: compiler_flags_GNU_Fortran.cmake  compiler_flags_Intel_Fortran.cmake  rrtmg_compiler_flags.cmake
mains/: CMakeLists.txt  lw_driver.f90  lw_jacobian.f90  lw_jacobian_6procs.f90  lw_jacobian_allwrite.f90
src/: CMakeLists.txt  MAPL_Constants.F90  rrtmg_lw_driver_mod.f90  rrtmg_lw_tools_mod.f90
src/rrtmg_lw/gcm_model/src/: gmcica_subcol_gen_lw.F90  gpu_rrtmg_lw_cldprmc.F90  gpu_rrtmg_lw_rtrnmc.F90  gpu_rrtmg_lw_taumol.F90  rrtmg_lw_init.F90  rrtmg_lw_rad.F90
utils/: plot_jacobian.py
